more work on SerialIn